todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system
mac getIpByName liefert name von IPnum

opsi-script (4.12.18.4)

* osmain: ProcessProdukt: update state and progress not for tacLogin
* osmain: Statprogrammodes: Loginscripts:
  do not write login script log to  Component log file (lastprodlog)

-- d.oertel <d.oertel@uib.de> 2025-08-04

opsi-script (4.12.18.3)

* fix handling install_in_background=false
* fix reset defaultloglevel for every product

-- d.oertel <d.oertel@uib.de> 2025-07-29


opsi-script (4.12.18.2)

 * earlier call of retrieveFolders4Linux; fix problems from 4.12.18.1
* fix  issue 59 osfuncwin2: KillProcessbyname does not work on french systems
   osfuncwin2: KillProcessbyname
   h := GetShellWindow; work language independent
   if this didn't worked: let us try with process name
   convert detected domain and usernames with WinCPToUTF8 (opsi-script dom\user found: AUTORITE NT\Système)
   some more logging

   osmain: Loginscripts:
   some more logging


-- d.oertel <d.oertel@uib.de> 2025-07-18

opsi-script (4.12.18.1) unreleased; urgency=medium

 * osfunc: getOSArchitecture:
   windows: use WMI CPU Architecture together with osfunc:Is64BitSystem (OS bitness)
   to dermine the os architecture (now arm / arm64 also supported)
* osbackgroundinstall: bg-dialog: write: #@ProgramName@# bold
* osbackgroundinstall: bg-dialog: no double process entries

-- d.oertel <d.oertel@uib.de> 2025-03-24

opsi-script (4.12.17.2) unreleased; urgency=medium

 * [fix] oswebservice.pas: remove productPropertyState_getObjects used in
         GetProductPropertyList and replace it with productPropertyState_getValues (j.werner, !256)

-- j.werner <j.werner@uib.de> 13 February 2025


opsi-script (4.12.17.1) released/testing; urgency=medium

 * [fix] osfuncwin.pas: RunCommandAndCaptureOut: fix array size,
         because array starts with 0 it must be 0...ReadBuffersize-1 (j.werner, !253)