@@ -26,7 +26,7 @@
       <MajorVersionNr Value="4"/>
       <MinorVersionNr Value="12"/>
       <RevisionNr Value="18"/>
-      <BuildNr Value="4"/>
+      <BuildNr Value="5"/>
       <StringTable Comments="Compiled with Lazarus 3.0 / FPC 3.2.2" CompanyName="uib gmbh" FileDescription="opsi-script" InternalName="opsi-script" LegalCopyright="AGPL v3" LegalTrademarks="opsi, opsi.org, open pc server integration" OriginalFilename="opsi-script" ProductName="opsi" ProductVersion="4.3"/>
     </VersionInfo>
     <BuildModes Count="18">
